--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         </div>
         <div class="earlyaccess__section__two">
           <form class="form">
-            <label for="email" class="visually-hidden">Email</label>
+            <label for="emailEarly" class="visually-hidden">Email</label>
             <input
               type="email"
-              id="email"
+              id="emailEarly"
               class="form__email form__email--earlyaccess"
               placeholder="email@example.com"
             />
@@ -159,13 +159,13 @@
       </div>
     </main>
     <footer class="footer">
-      <img src="images/logo-white.svg" />
+      <img src="images/logo-white.svg" alt="Fylo" />
 
       <div class="footer__section">
         <div class="footer__section__one">
           <ul class="footer__contact__menu">
-            <li><img src="images/icon-phone.svg" /> Phone: +1-543-123-4567</li>
-            <li><img src="images/icon-email.svg" /> example@fylo.com</li>
+            <li><img src="images/icon-phone.svg" alt="" /> Phone: +1-543-123-4567</li>
+            <li><img src="images/icon-email.svg" alt="" /> example@fylo.com</li>
           </ul>
         </div>
 
